--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.11MB/s(Youtube:不良林), server: 213.183.59.190, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 塞尔维亚-2.87MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-5.87MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 波兰-2.90MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-8.87MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.45MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
-      - 塞尔维亚-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
