--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,14 +6,14 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-5.87MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-2.90MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-8.87MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-664.2KB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 波兰-837.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.98MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.45MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.21MB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -22,14 +22,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
@@ -37,14 +37,14 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -53,14 +53,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -73,14 +73,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
@@ -88,14 +88,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,14 +104,14 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,14 +129,14 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
-      - 波兰-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-664.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 波兰-837.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
